--- a/PyCaret_Regression.ipynb
+++ b/PyCaret_Regression.ipynb
@@ -16,7 +16,7 @@
         "id": "SJ3g4KG_PUR1"
       },
       "source": [
-        "**Regression Project using PyCaret ML library**<br>\n",
+        "**Regression Project using PyCaret Python library**<br>\n",
         "By: Jose German"
       ]
     },
